--- a/Lova/Forum/AddDiscussionView.xaml
+++ b/Lova/Forum/AddDiscussionView.xaml
@@ -30,9 +30,13 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Grid.ColumnSpan="3" Content="Обсуждение" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Название:" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,37,0,0" Text="{Binding DiscussionName, Mode=TwoWay}"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,37,0,0" Text="{Binding DiscussionName, Mode=TwoWay}">
+            <TextBox.ToolTip>Текст не должен начинаться с пробела</TextBox.ToolTip>
+        </TextBox>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Текст:" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,50,0,0" Text="{Binding DiscussionText, Mode=TwoWay}"/>
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,50,0,0" Text="{Binding DiscussionText, Mode=TwoWay}">
+            <TextBox.ToolTip>Текст не должен начинаться с пробела</TextBox.ToolTip>
+        </TextBox>
         <Button Grid.Row="3" Grid.ColumnSpan="2" Content="Добавить обсуждение" Width="254" Height="51" Command="{Binding AddDiscussionCommand}"/>
         <Button Grid.Column="2" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,122,0,0" VerticalAlignment="Top"/>
         <Button Grid.Column="2" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,58,0,0" VerticalAlignment="Top" />
