--- a/Lova/Tests/CurrentTestView.xaml
+++ b/Lova/Tests/CurrentTestView.xaml
@@ -51,7 +51,9 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <TextBox Grid.Column="0" Grid.Row="3" Width="400" Height="50" VerticalAlignment="Top" Text="{Binding Answer, Mode=TwoWay}"/>
+        <TextBox Grid.Column="0" Grid.Row="3" Width="400" Height="50" VerticalAlignment="Top" Text="{Binding Answer, Mode=TwoWay}">
+            <TextBox.ToolTip>Текст не должен начинаться с пробела</TextBox.ToolTip>
+        </TextBox>
         <Button Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Height="50" Width="150" VerticalAlignment="Top"  Command="{Binding SaveAnswerCommand}" Content="Сохранить ответ"/>
         <Button Grid.Column="0" Grid.Row="3" Width="300" Height="60" HorizontalAlignment="Left" Command="{Binding CheckTestCommand}"  Content="Проверить тест" VerticalAlignment="Top" Margin="140,69,0,0"/>
         <Button Grid.Column="1" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,75,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
