--- a/Lova/Tests/UsersTestView.xaml
+++ b/Lova/Tests/UsersTestView.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.ColumnSpan="3" Grid.Column="0" Content="Результаты студентов" Grid.Row="0" Height="25" VerticalContentAlignment="Top"/>
+        <Label Grid.ColumnSpan="2" Grid.Column="0" Content="Результаты студентов" Grid.Row="0" VerticalContentAlignment="Top" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="302,-8,0,0"/>
         <DataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="3" ItemsSource="{Binding UserTests}" HorizontalAlignment="Center">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding TestName}" Header="Название теста" IsReadOnly="True" Width="150"/>
@@ -38,7 +38,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button Grid.Column="1" Grid.Row="2" Content="Форум" Command="{Binding GoToForumCommand}" Height="40" Width="170"/>
-        <Button Grid.Column="1" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Height="40" Width="170"/>
+        <Button Grid.ColumnSpan="2" Grid.Column="1" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Height="40" Width="170"/>
         <Button Grid.Column="2" Grid.Row="2" Content="Калькулятор" Command="{Binding GoToCalculatorCommand}" />
         <Image Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Source="..\Views\Resource\Image\Result.png" VerticalAlignment="Center" HorizontalAlignment="Center" Width="180"/>
     </Grid>
